# music-attribution-scaffold

./: .cruft.json  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  code-review-final-qa-prompt.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  GUARDRAILS.md  README.md  auto-context.yaml  golden-paths.md  settings.json  template-sync.yaml
.claude/config/: modes.yaml
.claude/domains/: configuration.md  testing.md
.claude/memory/: ci-local-test-discrepancies.md  css-tailwind-v4-pitfalls.md  follow-explicit-instructions.md
.claude/meta-learning/: 001-citation-verification-failure.md
.claude/rules/: 00-project-context.md  01-code-analysis-ban.md  05-source-of-truth.md  10-frontend-design-system.md  11-ux-first-philosophy.md
.claude/sessions/: current-session.md
.claude/skills/: SKILL.md  resize-figures.skill.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/figure-plan-creator/: NANO-BANANA-REFERENCE.md  SKILL.md
.claude/skills/figure-processor/: SKILL.md
.claude/skills/integrate-prd-research/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci-docker.yml  ci.yml  ciso-assistant-security.yml  deploy-docs.yml  template-sync-check.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_permissions_feedback_graph_vectors.py  003_add_uncertainty_summary.py  004_add_display_fields.py
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  docker-compose.test.yml  entrypoint.dev.sh  prometheus.yml
docker/grafana/dashboards/: voice-pipeline.json  (+1 more)
docs/: ENVIRONMENT.md  README.md  license-advanced.md
docs/api/: mcp-roadmap.md
docs/architecture/: README.md
docs/figures/: .gitignore  CONTENT-TEMPLATE.md  MERMAID-IMPLEMENTATION-PLAN.md  MERMAID-STYLE-GUIDE.md  README.md  STYLE-GUIDE-v2.md  STYLE-GUIDE.md  nano-banana-coverage-improvement-plan.md
docs/knowledge-base/: README.md  SYNTHESIS.md  voice-agent-component-alternatives.md
docs/planning/: agentic-ui-plan.xml  ai-tooling-landscape-2026-02.md  artifact-decoupling-contextualization.md  backend-db-implementation.xml  code-review-final-qa-report.md  commercial-landscape-stubs.xml  deployement-finops-landscape-geopolitical-risk-assessment.md  deployement-finops-landscape.md  doc-improvement-with-unknowns.md  docker-env-creation-plan.xml  docker-native-dev-plan.xml  documentation-tasks-for-ssrn-repo.xml  end-to-end-mvp-plan.xml  executable-plan-prompt-verbatim.md  expand-probabilistic-prd-to-discussion.md  figure-docs-improvement-plan.md  final-quality-polish-plan.xml  finops-optimization-plan.md  frontend-auth-landscape-2026.md  frontend-citation-improvement.md  frontend-perf-iteration-plan.xml  frontend-performance-optimization-plan-double-check.md  frontend-performance-optimization-plan.md  housekeeping-chores.xml  iterative-tdd-coder-skill-prompt-verbatim.md  managerial-roadmap-planning.md  mcp-security-production-research.md  mkdocs-styling.md  music-tech-figure-coverage-plan.md  nano-banana-pro-figure-improvement.md  observability-reproducability-double-checks.md  persona-voice-figures-processing-plan.xml  prd-creative-ideation-2026-02-04.md  prd-improvement-for-hierarchical-composable-plan.md  prd-self-reflection-analysis-2026-02-04.md  prd-self-reflection-prompt-2026-02-04.md  probabilistic-prd-design.md  probabilistic-prd-executable-plan.xml  probabilistic-prd-tool-landscape.md  probablistic-prd.md  (+20 more)
docs/polish-documentation/: README.md
docs/prd/: README.md  REJECTED.md  SYNTHESIS.md  UNKNOWNS-FOR-DOMAIN-EXPERTS.md  attribution-engine-prd.md  auracles-vision-v1.md  chat-interface-prd.md  defaults.yaml  llm-context.md  mcp-server-prd.md  schema.yaml  vision-v1.md
docs/site/: design-decisions.md  gallery.md  index.md  pitch-deck-advanced.md  pitch-deck.md  troubleshooting.md
docs/sources/: soundverse-2025-ethical-framework-ai-music-infrastructure.md  waterandmusic-2025-how-music-ai-attribution-works.md
docs/tutorials/: voice-agent-implementation.md
frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
overrides/: main.html
scripts/: benchmark_voice.py  css-token-lint.sh  generate_golden_dataset.py  init-extensions.sql  prd_context.py  run-pipeline.py  setup.sh  test-docker.sh  voice_demo.py
scripts/security/: compliance_check.py
src/music_attribution/: README.md  __init__.py  config.py  constants.py  core.py
state/: tdd-state.json
tests/: README.md  __init__.py  conftest.py  factories.py
tests/eval/: __init__.py
tests/integration/: __init__.py  conftest.py  test_agent_db_roundtrip.py  test_agent_e2e.py  test_database_setup.py  test_full_stack.py  test_migrations.py  test_migrations_real_pg.py  test_provenance_e2e.py
tests/unit/: __init__.py  conftest.py  test_agui_endpoint.py  test_api_app.py  test_api_attribution_routes_pg.py  test_api_dependencies.py  test_api_permission_routes.py  test_attribution_display_fields.py  test_attribution_persistence_pg.py  test_benchmark_e2e.py  test_benchmark_integration.py  test_benchmark_microphone.py  test_benchmark_script.py  test_benchmark_synthetic.py  test_benchmark_wer.py  test_chat_agent.py  test_chat_state.py  test_cli_db.py  test_config.py  test_db_engine.py  test_db_models.py  test_docs_math_safety.py  test_edge_repository.py  test_embedding_service.py  test_feedback_persistence.py  test_hybrid_search.py  test_landscape_docs.py  test_landscape_enums.py  test_landscape_stubs.py  test_metrics.py  test_migration_002_structure.py  test_monitoring_config.py  test_permissions_persistence.py  test_pipeline_dag.py  test_prd_network.py  test_prd_xops_expansion.py  test_prod_dockerfile.py  test_project_metadata.py  test_provenance_api.py  test_seed_imogen_heap.py  (+6 more)
(+986 files in other folders)
